--- a/webroot/index.html
+++ b/webroot/index.html
@@ -56,11 +56,89 @@
         .info-card h3 { font-size:1rem; margin-bottom:10px; display:flex; align-items:center; gap:8px; color:var(--text-secondary); }
         .info-card p { font-size:1.4rem; font-weight:500; color:var(--primary); }
         .toast-container { display:none; }
+        
+        /* Стили для блока рекламы */
+        .ad-container { 
+            margin: 30px 0; 
+            animation: fadeIn 0.5s ease-out;
+        }
+        .ad-card {
+            background: var(--card-bg);
+            border-radius: 10px;
+            border: 1px solid var(--border);
+            overflow: hidden;
+            transition: var(--transition);
+            cursor: pointer;
+        }
+        .ad-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 8px 25px rgba(0,0,0,0.4);
+            border-color: var(--primary);
+        }
+        .ad-header {
+            padding: 15px 20px;
+            border-bottom: 1px solid var(--border);
+            background: rgba(42,42,42,0.5);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+        }
+        .ad-body {
+            padding: 20px;
+        }
+        .ad-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+            gap: 20px;
+            margin-top: 15px;
+        }
+        .ad-item {
+            background: rgba(42,42,42,0.3);
+            border-radius: 8px;
+            padding: 15px;
+            border: 1px solid var(--border);
+            transition: var(--transition);
+            display: flex;
+            flex-direction: column;
+        }
+        .ad-item:hover {
+            border-color: var(--primary);
+            background: rgba(0,200,83,0.05);
+        }
+        .ad-item h4 {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            margin-bottom: 10px;
+            color: var(--text-primary);
+        }
+        .ad-item p {
+            color: var(--text-secondary);
+            flex-grow: 1;
+            margin-bottom: 15px;
+            font-size: 0.9rem;
+            line-height: 1.5;
+        }
+        .ad-link {
+            color: var(--primary);
+            text-decoration: none;
+            font-size: 0.9rem;
+            display: flex;
+            align-items: center;
+            gap: 5px;
+            transition: var(--transition);
+        }
+        .ad-link:hover {
+            text-decoration: underline;
+        }
+        
         @media (max-width:768px) {
             header { flex-direction:column; gap:15px; text-align:center; }
             .file-info { flex-direction:column; gap:10px; align-items:flex-start; }
             .button-group { flex-direction:column; }
             .btn { width:100%; justify-content:center; }
+            .ad-grid { grid-template-columns: 1fr; }
         }
     </style>
 </head>
@@ -112,6 +190,49 @@
                     <div class="button-group">
                         <button id="btnSave" class="btn btn-primary"><i class="material-icons">save</i> Сохранить изменения</button>
                         <button id="btnReload" class="btn btn-secondary"><i class="material-icons">refresh</i> Перезагрузить</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Блок рекламы других разработок Ggover -->
+            <div class="ad-container">
+                <div class="ad-card" onclick="window.location.href='add.html'">
+                    <div class="ad-header">
+                        <i class="material-icons">apps</i>
+                        <h2 class="card-title">Другие разработки Ggover</h2>
+                    </div>
+                    <div class="ad-body">
+                        <p>Откройте для себя другие полезные модули от разработчика Security System GG</p>
+                        <div class="ad-grid">
+                            <div class="ad-item">
+                                <h4><i class="material-icons">network_check</i> ZDT-D</h4>
+                                <p>Модуль Magisk для обхода DPI (глубокого анализа пакетов) в интернете. Помогает обходить блокировки сервисов и ограничения скорости.</p>
+                                <a href="https://github.com/GAME-OVER-op/ZDT-D" class="ad-link" onclick="event.stopPropagation()">
+                                    <i class="material-icons">open_in_new</i> Подробнее на GitHub
+                                </a>
+                            </div>
+                            <div class="ad-item">
+                                <h4><i class="material-icons">memory</i> RAM Cleaner</h4>
+                                <p>Модуль Magisk, который автоматически освобождает оперативную память устройства каждые 15 минут, завершая ненужные фоновые процессы.</p>
+                                <a href="https://github.com/GAME-OVER-op/Module-for-cleaning-RAM" class="ad-link" onclick="event.stopPropagation()">
+                                    <i class="material-icons">open_in_new</i> Подробнее на GitHub
+                                </a>
+                            </div>
+                            <div class="ad-item">
+                                <h4><i class="material-icons">ac_unit</i> Thermal Snapdragon OFF</h4>
+                                <p>Модуль для устройств на базе Snapdragon, отключающий тепловые ограничения с целью снижения троттлинга и повышения производительности.</p>
+                                <a href="https://github.com/GAME-OVER-op/Thermal-Snapdragon-OFF" class="ad-link" onclick="event.stopPropagation()">
+                                    <i class="material-icons">open_in_new</i> Подробнее на GitHub
+                                </a>
+                            </div>
+                            <div class="ad-item">
+                                <h4><i class="material-icons">wifi</i> CPT-P (в разработке)</h4>
+                                <p>Модуль Magisk для реализации портала авторизации на устройствах Android. Перенаправляет пользователей на страницу регистрации при подключении.</p>
+                                <a href="#" class="ad-link" onclick="event.stopPropagation()">
+                                    <i class="material-icons">schedule</i> Скоро будет доступно
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
